--- a/configurations/SolarSystem.ini
+++ b/configurations/SolarSystem.ini
@@ -64,12 +64,27 @@ body_type = planet                         # star/planet
 mass = 0.642e24                            # [kg]
 radius = 3346e03                           # [m]
 luminosity = 0.0                           # [W]
-a = 1.52 * au                              # [m] semi-major axis
-e = 0.800000001                          # [1] eccentricity
+a = 1.001 * au                              # [m] semi-major axis
+e = 0.9500000001                          # [1] eccentricity
 i = 88.0                                   # [deg] inclination. 90° means we see the orbit edge-on.
 longitude_of_ascending_node = 30          # [deg] Ω: longitude of ascending node
 longitude_of_periapsis = 20                 # [deg] ϖ: longitude of periapsis
-L = 61                                      # [deg] mean longitude
+L = 1                                      # [deg] mean longitude
 t = 0                                      # [s] arbitrary point in time (typically time since last time of transit)
 beta = None                                # Limb darkening
 color = 0.01, 0.99, 0.01                   # RGB value in animation
+
+;[Test2]
+;body_type = planet                         # star/planet
+;mass = 0.642e24                            # [kg]
+;radius = 3346e03                           # [m]
+;luminosity = 0.0                           # [W]
+;a = 1.001 * au                              # [m] semi-major axis
+;e = 0.00000001                          # [1] eccentricity
+;i = 88.0                                   # [deg] inclination. 90° means we see the orbit edge-on.
+;longitude_of_ascending_node = 30          # [deg] Ω: longitude of ascending node
+;longitude_of_periapsis = 20                 # [deg] ϖ: longitude of periapsis
+;L = 1                                      # [deg] mean longitude
+;t = 0                                      # [s] arbitrary point in time (typically time since last time of transit)
+;beta = None                                # Limb darkening
+;color = 0.71, 0.09, 0.41                   # RGB value in animation
