--- a/configurations/SolarSystem.ini
+++ b/configurations/SolarSystem.ini
@@ -42,7 +42,7 @@ red_dot_height = 1/13        # <float> relative height of red dot in lightcurve 
 red_dot_width = 1/200        # <float> relative width of red dot in lightcurve plot
 
 [Debug]                       # For debugging purposes only. Ignore the whole section if you aren't a curvesimulator developer.
-# debug_L = [180] # run funktion debug_print_points for these values of L. First value should be 0.
+# debug_L = [0, 20, 40, 88] # run funktion debug_print_points for these values of L. First value should be 0.
 debug_L = [i for i in range(0, 360, 17)] # run funktion debug_print_points for these values of L. First value should be 0.
 
 # all following sections define physical bodies in the simulation
