--- a/configurations/SolarSystem.ini
+++ b/configurations/SolarSystem.ini
@@ -4,21 +4,21 @@
 # you may use the astronomical constants defined in this section in all following sections, e.g. scope_left = 1.9 * au
 g  = 6.67430e-11             # [m**3/kg/s**2] <float> gravitational constant +/- 0.00015
 au = 1.495978707e11          # [m]   <float> astronomical unit
-r_sun = 6.96342e8            # [m]   <float> sun radius
-m_sun = 1.98847e30           # [kg]  <float> sun mass +/- 0.00007
+r_sun = 6.96342e8            # [m]   <float> solar radius
+m_sun = 1.98847e30           # [kg]  <float> solar mass +/- 0.00007
 l_sun = 3.83e26              # [W]   <float> solar luminosity
 r_jup = 7.1492e7             # [m]   <float> Jupiter radius
 m_jup = 1.8981246e27         # [kg]  <float> Jupiter mass
-r_earth = 6.378135e6         # [m]   <float> earth radius
-m_earth = 5.9720e24          # [kg]  <float> earth mass
-v_earth = 2.97852e4          # [m/s] <float> earth orbital velocity (if orbit was circular)
+r_earth = 6.378135e6         # [m]   <float> Earth radius
+m_earth = 5.9720e24          # [kg]  <float> Earth mass
+v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit was circular)
 
 [Video]
-video_file = ../animations/testing.mp4  # <string> the resulting video is saved with this file name
+video_file = ../animations/testing.mp4  # <string> the resulting video is saved in this file
 frames = 29                  # <int> number of frames of video. Proportional to this program's run time and to the lenght of the animation.
 fps = 30                     # <int> frames per second in video. Proportional to the velocity of the objects in the animation. Inverse proportional to lenght of video.
 dt = 3600                    # [s] <int> time difference between iterations. Proportional to the velocity of the objects in the animation. Needs to be small in order to calculate with sufficient precision when objects are close to each other.
-sampling_rate = 200           # <int> Calculating the physics is much faster than animating it. Therefore only 1/sampling_rate of the calculated iterations is used as a frame in the animation.
+sampling_rate = 200          # <int> Calculating the physics is much faster than animating it. Therefore only 1/sampling_rate of the calculated iterations is used as a frame in the animation.
 
 [Scale]
 scope_left = 6.0 * au        # [m] <float> scope of left plotting window is [-scope_left, scope_left]. Middle of window is (0.0, 0.0)
