--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -1,4 +1,5 @@
 [Astronomical Constants]
+# do not edit this section
 # you may use the astronomical constants defined in this section in all following sections, e.g. scope_left = 1.9 * au
 g  = 6.67430e-11             # [m**3/kg/s**2] <float> gravitational constant +/- 0.00015  This parameter must be defined here!
 au = 1.495978707e11          # [m]   <float> astronomical unit
@@ -12,22 +13,40 @@ m_earth = 5.9720e24          # [kg]  <float> Earth mass
 v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit was circular)
 
 [Video]
-video_file = ../animations/testing.mp4  # <string> the resulting video is saved in this file
-frames = 9                  # <int> number of frames of video. Proportional to this program's run time and to the lenght of the animation.
-fps = 30                     # <int> frames per second in video. Proportional to the velocity of the objects in the animation. Inverse proportional to lenght of video.
-dt = 3600                    # [s] <int> time difference between iterations. Proportional to the velocity of the objects in the animation. Needs to be small in order to calculate with sufficient precision when objects are close to each other.
-sampling_rate = 200          # <int> Calculating the physics is much faster than animating it. Therefore only 1/sampling_rate of the calculated iterations is used as a frame in the animation.
+video_file = MyFirstVideo.mp4  # <string> the resulting video is saved in this file
+frames = 90                    # <int> number of frames of video. Proportional to Curvesimulator's run time
+                               # and to the length of the animation.
+fps = 30                       # <int> frames per second in video. Proportional to the velocity of the
+                               # objects in the animation. Inverse proportional to length of video.
+dt = 3600                      # [s] <int> time difference between simulation iterations. Proportional to the
+                               # velocity of the objects in the animation. Needs to be small in order to
+                               # calculate with sufficient precision when objects are close to each other.
+                               # Reasonable values can easily be under 10 seconds or over 10000 seconds. If
+                               # your orbits change after a few rotations then you probably need a smaller value.
+sampling_rate = 200            # <int> Calculating the physics is much faster than animating it. Therefore only
+                               # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
+                               # In other words: The simulation's number of calculated iterations and also the
+                               # length of the array with lightcurve data will be equal to frames * sampling_rate.
 
 [Scale]
-scope_left = 6.0 * au        # [m] <float> scope of left plotting window is [-scope_left, scope_left]. Middle of window is (0.0, 0.0)
-scope_right = 6.0 * au       # [m] <float> scope of right plotting window is [-scope_right, scope_right]. Middle of window is (0.0, 0.0)
+scope_left = 6.0 * au        # [m] <float> scope of left plotting window is [-scope_left, scope_left].
+                             # Middle of window is (0.0, 0.0)
+scope_right = 6.0 * au       # [m] <float> scope of right plotting window is [-scope_right, scope_right].
+                             # Middle of window is (0.0, 0.0)
 autoscaling = on             # <string> allowed values: on, off
-star_scale_left = 100.0      # [1] <float> (if autoscale off) animate stars with StarScale_left times enlarged radius in left view.
-planet_scale_left = 1000.0   # [1] <float> (if autoscale off) animate planets with PlanetScale_left times enlarged radius in left view.
-star_scale_right = 100.0     # [1] <float> (if autoscale off) animate stars with StarScale_right times enlarged radius in right view.
-planet_scale_right = 1000.0  # [1] <float> (if autoscale off) animate planets with PlanetScale_right times enlarged radius in right view.
-min_radius = 0.5             # [%] <float> (if autoscale on) radius of smallest body in animation relative to plot scope. radius=1 would fill the whole plot.
-max_radius = 0.5             # [%] <float> (if autoscale on) maximum radius of largest body in animation relative to plot scope. radius=1 would fill the whole plot. If necessary, scaling will be done logaritmically instead of linear.
+star_scale_left = 100.0      # [1] <float> (if autoscale off) animate stars with StarScale_left times
+                             # enlarged radius in left view.
+planet_scale_left = 1000.0   # [1] <float> (if autoscale off) animate planets with PlanetScale_left times
+                             # enlarged radius in left view.
+star_scale_right = 100.0     # [1] <float> (if autoscale off) animate stars with StarScale_right times
+                             # enlarged radius in right view.
+planet_scale_right = 1000.0  # [1] <float> (if autoscale off) animate planets with PlanetScale_right times
+                             # enlarged radius in right view.
+min_radius = 0.5             # [%] <float> (if autoscale on) radius of smallest body in animation relative
+                             # to plot scope. radius=1 would fill the whole plot.
+max_radius = 0.5             # [%] <float> (if autoscale on) maximum radius of largest body in animation
+                             # relative to plot scope. radius=1 would fill the whole plot.
+                             # If necessary, scaling will be done logarithmically instead of linear.
 
 [Plot]
 x_unit = d                   # <string> allowed values: s (seconds), h (hours), d (days), m (months), y (years)
@@ -39,13 +58,13 @@ ylim = 1.0                   # <float> left and right view both show y-values be
 red_dot_height = 1/13        # <float> relative height of red dot in lightcurve plot
 red_dot_width = 1/200        # <float> relative width of red dot in lightcurve plot
 
-[Debug]                       # For debugging purposes only. Ignore the whole section if you aren't a curvesimulator developer.
-# debug_L = [0, 20, 40, 88] # run funktion debug_print_points for these values of L. First value should be 0.
+[Debug]                       # For debugging purposes only. Ignore the whole section if you aren't
+                              # a curvesimulator developer.
+# debug_L = [0, 20, 40, 88]   # run funktion debug_print_points for these values of L. First value should be 0.
 debug_L = [i for i in range(0, 360, 17)] # run funktion debug_print_points for these values of L. First value should be 0.
 
 # all following sections define physical bodies in the simulation
 # the section names define the names of the bodies
-;[ExampleBody]
 
 [Sun]
 body_type = star                           # star/planet
@@ -71,18 +90,3 @@ L = 1                                      # [deg] mean longitude
 t = 0                                      # [s] arbitrary point in time (typically time since last time of transit)
 beta = None                                # Limb darkening
 color = 0.01, 0.99, 0.01                   # RGB value in animation
-
-;[Test2]
-;body_type = planet                         # star/planet
-;mass = 0.642e24                            # [kg]
-;radius = 3346e03                           # [m]
-;luminosity = 0.0                           # [W]
-;a = 1.001 * au                              # [m] semi-major axis
-;e = 0.00000001                          # [1] eccentricity
-;i = 88.0                                   # [deg] inclination. 90° means we see the orbit edge-on.
-;longitude_of_ascending_node = 30          # [deg] Ω: longitude of ascending node
-;longitude_of_periapsis = 20                 # [deg] ϖ: longitude of periapsis
-;L = 1                                      # [deg] mean longitude
-;t = 0                                      # [s] arbitrary point in time (typically time since last time of transit)
-;beta = None                                # Limb darkening
-;color = 0.71, 0.09, 0.41                   # RGB value in animation
