--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -13,7 +13,7 @@ m_earth = 5.9720e24          # [kg]  <float> Earth mass
 v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit was circular)
 
 [Video]
-video_file = MyFirstVideo.mp4  # <string> the resulting video is saved in this file
+video_file = ../animations/MyFirstVideo.mp4  # <string> the resulting video is saved in this file
 frames = 29                    # <int> number of frames of video. Proportional to Curvesimulator's run time
                                # and to the length of the animation.
 fps = 30                       # <int> frames per second in video. Proportional to the velocity of the
