--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -12,23 +12,23 @@ r_earth = 6.378135e6         # [m]   <float> Earth radius
 m_earth = 5.9720e24          # [kg]  <float> Earth mass
 v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit was circular)
 
-[Video]
+[Video]                      # This section controls length and quality of the simulation and the resulting video.
 video_file = ../animations/MyFirstVideo.mp4  # <string> the resulting video is saved in this file
-frames = 29                    # <int> number of frames of video. Proportional to Curvesimulator's run time
-                               # and to the length of the animation.
-fps = 30                       # <int> frames per second in video. Proportional to the velocity of the
-                               # objects in the animation. Inverse proportional to length of video.
-dt = 3600                      # [s] <int> time difference between simulation iterations. Proportional to the
-                               # velocity of the objects in the animation. Needs to be small in order to
-                               # calculate with sufficient precision when objects are close to each other.
-                               # Reasonable values can easily be under 10 seconds or over 10000 seconds. If
-                               # your orbits change after a few rotations then you probably need a smaller value.
-sampling_rate = 200            # <int> Calculating the physics is much faster than animating it. Therefore only
-                               # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
-                               # In other words: The simulation's number of calculated iterations and also the
-                               # length of the array with lightcurve data will be equal to frames * sampling_rate.
+frames = 3                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+                             # and to the length of the animation.
+fps = 30                     # <int> frames per second in video. Proportional to the velocity of the
+                             # objects in the animation. Inverse proportional to length of video.
+dt = 3600                    # [s] <int> time difference between simulation iterations. Proportional to the
+                             # velocity of the objects in the animation. Needs to be small in order to
+                             # calculate with sufficient precision when objects are close to each other.
+                             # Reasonable values can easily be under 10 seconds or over 10000 seconds. If
+                             # your orbits change after a few rotations then you probably need a smaller value.
+sampling_rate = 200          # <int> Calculating the physics is much faster than animating it. Therefore only
+                             # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
+                             # In other words: The simulation's number of calculated iterations and also the
+                             # length of the array with lightcurve data will be equal to frames * sampling_rate.
 
-[Scale]
+[Scale]                      # This section controls the size of objects in the animation.
 scope_left = 6.0 * au        # [m] <float> scope of left plotting window is [-scope_left, scope_left].
                              # Middle of window is (0.0, 0.0)
 scope_right = 6.0 * au       # [m] <float> scope of right plotting window is [-scope_right, scope_right].
@@ -42,9 +42,9 @@ star_scale_right = 100.0     # [1] <float> (if autoscale off) animate stars with
                              # enlarged radius in right view.
 planet_scale_right = 1000.0  # [1] <float> (if autoscale off) animate planets with PlanetScale_right times
                              # enlarged radius in right view.
-min_radius = 2.0             # [%] <float> (if autoscale on) radius of smallest body in animation relative
+min_radius = 1.7             # [%] <float> (if autoscale on) radius of smallest body in animation relative
                              # to plot scope. radius=100 would fill the whole plot.
-max_radius = 7.0             # [%] <float> (if autoscale on) maximum radius of largest body in animation
+max_radius = 6.0             # [%] <float> (if autoscale on) maximum radius of largest body in animation
                              # relative to plot scope. radius=100 would fill the whole plot.
                              # If necessary, scaling will be done logarithmically instead of linear.
 
@@ -58,15 +58,17 @@ ylim = 1.0                   # <float> left and right view both show y-values be
 red_dot_height = 1/13        # <float> relative height of red dot in lightcurve plot
 red_dot_width = 1/200        # <float> relative width of red dot in lightcurve plot
 
-[Debug]                       # For debugging purposes only. Ignore the whole section if you aren't
-                              # a curvesimulator developer.
-# debug_L = [0, 20, 40, 88]   # run funktion debug_print_points for these values of L. First value should be 0.
-debug_L = [i for i in range(0, 360, 17)] # run funktion debug_print_points for these values of L. First value should be 0.
+[Debug]                      # For debugging purposes only. Ignore the whole section if you aren't
+                             # a curvesimulator developer.
+# debug_L = [0, 20, 40, 88]  # run funktion debug_print_points for these values of L.
+                             # First value should be 0.
+debug_L = [i for i in range(0, 360, 17)] # run funktion debug_print_points for these values of L.
+                                         # First value should be 0.
 
 # all following sections define physical bodies in the simulation
 # the section names define the names of the bodies
 
-[Sun]
+[TestSun]
 body_type = star                           # star/planet
 mass = 1.0 * m_sun                         # [kg]
 radius = 1.0 * r_sun                       # [m]
@@ -76,7 +78,7 @@ velocity = 0.0, 0.0, 0.0                   # [m/s], [m/s], [m/s]
 beta = 2.3                                 # Limb darkening
 color = 0.99, 0.99, 0.11                   # RGB value in animation
 
-[Test]
+[TestPlanet]
 body_type = planet                         # star/planet
 mass = 0.642e24                            # [kg]
 radius = 3346e03                           # [m]
