--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -14,7 +14,7 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 video_file = ../animations/MyFirstVideo.mp4  # <string> the resulting video is saved in this file
-frames = 3                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 30                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 30                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -69,26 +69,42 @@ debug_L = [i for i in range(0, 360, 17)] # run funktion debug_print_points for t
 # the section names define the names of the bodies
 
 [TestSun]
-body_type = star                           # star/planet
-mass = 1.0 * m_sun                         # [kg]
-radius = 1.0 * r_sun                       # [m]
-luminosity = 1.0 * l_sun                   # [W]
-startposition = 0.0, 0.0, 0.0              # [m], [m], [m]
-velocity = 0.0, 0.0, 0.0                   # [m/s], [m/s], [m/s]
-beta = 2.3                                 # Limb darkening
-color = 0.99, 0.99, 0.11                   # RGB value in animation
+body_type = star                     # star/planet
+mass = 1.0 * m_sun                   # [kg]
+radius = 1.0 * r_sun                 # [m]
+luminosity = 1.0 * l_sun             # [W]
+startposition = 0.0, 0.0, 0.0        # [m], [m], [m]
+velocity = 0.0, 0.0, 0.0             # [m/s], [m/s], [m/s]
+beta = 2.3                           # Limb darkening
+color = 0.99, 0.99, 0.11             # RGB value in animation. Minimum = 0, maximum = 1.
 
 [TestPlanet]
-body_type = planet                         # star/planet
-mass = 0.642e24                            # [kg]
-radius = 3346e03                           # [m]
-luminosity = 0.0                           # [W]
-a = 1.001 * au                              # [m] semi-major axis
-e = 0.500000001                          # [1] eccentricity
-i = 88.0                                   # [deg] inclination. 90° means we see the orbit edge-on.
-longitude_of_ascending_node = 30          # [deg] Ω: longitude of ascending node
-longitude_of_periapsis = 20                 # [deg] ϖ: longitude of periapsis
-L = 1                                      # [deg] mean longitude
-t = 0                                      # [s] arbitrary point in time (typically time since last time of transit)
-beta = None                                # Limb darkening
-color = 0.01, 0.99, 0.01                   # RGB value in animation
+body_type = planet                   # star/planet
+mass = 0.642e24                      # [kg]
+radius = 3346e03                     # [m]
+
+# if the state vector (startposition and velocity) is provided, no Kepler orbit parameters have to be provided
+# startposition = 1.0 * au, 1.0 * au, 1.0 * au  # [m], [m], [m]
+# velocity = 1.0 * v_earth, 1.0 * v_earth, 1.0 * v_earth  # [m/s], [m/s], [m/s]
+
+a = 1.0 * au                         # [m] semi-major axis
+e = 0.2                              # [1] eccentricity
+i = 88.0                             # [deg] inclination. 90° means we see the orbit edge-on.
+longitude_of_ascending_node = 5      # [deg] Ω: longitude of ascending node
+longitude_of_periapsis = 10          # [deg] ϖ: longitude of periapsis
+L = 1                                # [deg] mean longitude
+
+# argument_of_periapsis = 0          # [deg] ω: argument of periapsis
+# nu, ma, ea, T:   Only true anomaly or mean_anomaly or eccentric_anomaly or time_of_periapsis has to be provided.
+# ma can be calculated from ϖ and L.
+# ω can be calculated from ϖ and Ω.
+# nu = 0                             # [deg] true anomaly.
+                                     # Per definition = 270° at the time of an exoplanet's primary transit.
+# ma = 0                             # [deg] mean anomaly
+# ea = 0                             # [deg] eccentric anomaly
+# T = 0                              # [s] Time of periapsis
+
+t = 0                                # [s] arbitrary point in time (typically time since last time of transit)
+beta = None                          # Limb darkening
+luminosity = 0.0                     # [W]
+color = 0.01, 0.99, 0.01             # RGB value in animation. Minimum = 0, maximum = 1.
