--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -75,7 +75,7 @@ radius = 1.0 * r_sun                 # [m]
 luminosity = 1.0 * l_sun             # [W]
 startposition = 0.0, 0.0, 0.0        # [m], [m], [m]
 velocity = 0.0, 0.0, 0.0             # [m/s], [m/s], [m/s]
-beta = 2.3                           # Limb darkening
+limb_darkening = [0.3, 0.9, -0.2]    # Limb darkening coefficients a0, a1, ..., an
 color = 0.99, 0.99, 0.11             # RGB value in animation. Minimum = 0, maximum = 1.
 
 [TestPlanet]
@@ -105,6 +105,6 @@ L = 1                                # [deg] mean longitude
 # T = 0                              # [s] Time of periapsis
 
 t = 0                                # [s] arbitrary point in time (typically time since last time of transit)
-beta = None                          # Limb darkening
+limb_darkening = None                # Limb darkening coefficients a0, a1, ..., an
 luminosity = 0.0                     # [W]
 color = 0.01, 0.99, 0.01             # RGB value in animation. Minimum = 0, maximum = 1.
