--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /__pychache
 /src/curvesimulator/__pychache
 /src/dist/
+/src/build/
 /src/MyFirstVideo.mp4
 /animations/testing.mp4
 /animations/MyFirstVideo.mp4
