--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /src/curvesimulator/__pychache
 /src/dist/
 /src/build/
+/src/curvesimulator.egg-info/
 /src/MyFirstVideo.mp4
 /animations/testing.mp4
 /animations/MyFirstVideo.mp4
