--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -89,7 +89,8 @@ radius = 3346e03                     # [m]
 
 a = 1.0 * au                         # [m] semi-major axis
 e = 0.2                              # [1] eccentricity
-i = 88.0                             # [deg] inclination. 90° means we see the orbit edge-on.
+i = 88.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
+                                     # in front of the sun, as well as above and behind the sun in edge view.
 longitude_of_ascending_node = 5      # [deg] Ω: longitude of ascending node
 longitude_of_periapsis = 10          # [deg] ϖ: longitude of periapsis
 L = 1                                # [deg] mean longitude
