--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -18,15 +18,18 @@ frames = 6                  # <int> number of frames of video. Proportional to C
                              # and to the length of the animation.
 fps = 30                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
-dt = 3600                    # [s] <int> time difference between simulation iterations. Proportional to the
-                             # velocity of the objects in the animation. Needs to be small in order to
+dt = 3600                    # [s] <int> real time difference between simulation iterations. Proportional to
+                             # the velocity of the objects in the animation. Needs to be small in order to
                              # calculate with sufficient precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 10000 seconds. If
                              # your orbits change after a few rotations then you probably need a smaller value.
+                             # dt * sampling_rate is the real time difference between 2 frames in the animation.
+                             # If your star system produces eclipses, dt * sampling_rate should be < 1000 in
+                             # order to generate an accurate light curve.
 sampling_rate = 200          # <int> Calculating the physics is much faster than animating it. Therefore only
                              # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
                              # In other words: The simulation's number of calculated iterations and also the
-                             # length of the array with lightcurve data will be equal to frames * sampling_rate.
+                             # length of the array with light curve data will be equal to frames * sampling_rate.
 
 [Scale]                      # This section controls the size of objects in the animation.
 scope_left = 6.0 * au        # [m] <float> scope of left plotting window is [-scope_left, scope_left].
@@ -55,8 +58,8 @@ figure_width = 16            # <int>   width of figure which contains all plots 
 figure_height = 8            # <int>   height of figure which contains all plots and animations
 xlim = 1.25                  # <float> left and right view both show x-values between -Xlim and + Xlim
 ylim = 1.0                   # <float> left and right view both show y-values between -Ylim and + Ylim
-red_dot_height = 1/13        # <float> relative height of red dot in lightcurve plot
-red_dot_width = 1/200        # <float> relative width of red dot in lightcurve plot
+red_dot_height = 1/13        # <float> relative height of red dot in light curve plot
+red_dot_width = 1/200        # <float> relative width of red dot in light curve plot
 
 [Debug]                      # For debugging purposes only. Ignore the whole section if you aren't
                              # a curvesimulator developer.
@@ -89,10 +92,10 @@ radius = 3346e03                     # [m]
 
 a = 1.0 * au                         # [m] semi-major axis
 e = 0.2                              # [1] eccentricity
-i = 88.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
+i = 90.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
                                      # in front of the sun, as well as above and behind the sun in edge view.
-longitude_of_ascending_node = 5      # [deg] Ω: longitude of ascending node
-longitude_of_periapsis = 10          # [deg] ϖ: longitude of periapsis
+longitude_of_ascending_node = 0      # [deg] Ω: longitude of ascending node
+longitude_of_periapsis = 0           # [deg] ϖ: longitude of periapsis
 L = 1                                # [deg] mean longitude
 
 # argument_of_periapsis = 0          # [deg] ω: argument of periapsis
