--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -18,7 +18,7 @@ frames = 6                  # <int> number of frames of video. Proportional to C
                              # and to the length of the animation.
 fps = 30                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
-dt = 3600                    # [s] <int> real time difference between simulation iterations. Proportional to
+dt = 20000                    # [s] <int> real time difference between simulation iterations. Proportional to
                              # the velocity of the objects in the animation. Needs to be small in order to
                              # calculate with sufficient precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 10000 seconds. If
@@ -53,6 +53,7 @@ max_radius = 6.0             # [%] <float> (if autoscale on) maximum radius of l
 
 [Plot]
 x_unit = d                   # <string> allowed values: s (seconds), h (hours), d (days), m (months), y (years)
+;start_date = 25555.55        # Barycentric Julian Date at the start of the simulation
 # adjust the following plot parameters in this section only if the plots do not fit well on your screen
 figure_width = 16            # <int>   width of figure which contains all plots and animations
 figure_height = 8            # <int>   height of figure which contains all plots and animations
