--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -107,7 +107,7 @@ L = 1                                # [deg] mean longitude
                                      # Per definition = 270° at the time of an exoplanet's primary transit.
 # ma = 0                             # [deg] mean anomaly
 # ea = 0                             # [deg] eccentric anomaly
-# T = 0                              # [s] Time of periapsis
+T = 0.1                              # [s] Time of periapsis
 
-t = 0                                # [s] arbitrary point in time (typically time since last time of transit)
+t = 0.2                                # [s] arbitrary point in time (typically time since last time of transit)
 color = 0.01, 0.99, 0.01             # RGB value in animation. Minimum = 0, maximum = 1.
