--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -14,11 +14,11 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 video_file = ../animations/MyFirstVideo.mp4  # <string> the resulting video is saved in this file
-frames = 6                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 36                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
-fps = 30                     # <int> frames per second in video. Proportional to the velocity of the
+fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
-dt = 20000                    # [s] <int> real time difference between simulation iterations. Proportional to
+dt = 5000                    # [s] <int> real time difference between simulation iterations. Proportional to
                              # the velocity of the objects in the animation. Needs to be small in order to
                              # calculate with sufficient precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 10000 seconds. If
@@ -92,12 +92,12 @@ radius = 3346e03                     # [m]
 # velocity = 1.0 * v_earth, 1.0 * v_earth, 1.0 * v_earth  # [m/s], [m/s], [m/s]
 
 a = 1.0 * au                         # [m] semi-major axis
-e = 0.2                              # [1] eccentricity
+e = 0.4                              # [1] eccentricity
 i = 90.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
                                      # in front of the sun, as well as above and behind the sun in edge view.
 longitude_of_ascending_node = 0      # [deg] Ω: longitude of ascending node
 longitude_of_periapsis = 0           # [deg] ϖ: longitude of periapsis
-L = 1                                # [deg] mean longitude
+L = 0                                # [deg] mean longitude
 
 # argument_of_periapsis = 0          # [deg] ω: argument of periapsis
 # nu, ma, ea, T:   Only true anomaly or mean_anomaly or eccentric_anomaly or time_of_periapsis has to be provided.
@@ -107,7 +107,7 @@ L = 1                                # [deg] mean longitude
                                      # Per definition = 270° at the time of an exoplanet's primary transit.
 # ma = 0                             # [deg] mean anomaly
 # ea = 0                             # [deg] eccentric anomaly
-T = 0.1                              # [s] Time of periapsis
+T = 0                            # [s] Time of periapsis
 
-t = 0.2                                # [s] arbitrary point in time (typically time since last time of transit)
+t = 3600*24*365                              # [s] arbitrary point in time (typically time since last time of transit)
 color = 0.01, 0.99, 0.01             # RGB value in animation. Minimum = 0, maximum = 1.
