--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -18,7 +18,7 @@ frames = 36                  # <int> number of frames of video. Proportional to 
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
-dt = 5000                    # [s] <int> real time difference between simulation iterations. Proportional to
+dt = 60                    # [s] <int> real time difference between simulation iterations. Proportional to
                              # the velocity of the objects in the animation. Needs to be small in order to
                              # calculate with sufficient precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 10000 seconds. If
@@ -26,7 +26,7 @@ dt = 5000                    # [s] <int> real time difference between simulation
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # If your star system produces eclipses, dt * sampling_rate should be < 1000 in
                              # order to generate an accurate light curve.
-sampling_rate = 30          # <int> Calculating the physics is much faster than animating it. Therefore only
+sampling_rate = 20          # <int> Calculating the physics is much faster than animating it. Therefore only
                              # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
                              # In other words: The simulation's number of calculated iterations and also the
                              # length of the array with light curve data will be equal to frames * sampling_rate.
@@ -53,7 +53,7 @@ max_radius = 6.0             # [%] <float> (if autoscale on) maximum radius of l
 
 [Plot]
 x_unit = d                   # <string> allowed values: s (seconds), h (hours), d (days), m (months), y (years)
-;start_date = 25555.55        # Barycentric Julian Date at the start of the simulation
+start_date = 2468000.0       # Barycentric Julian Date (TDB) at the start of the simulation
 # adjust the following plot parameters in this section only if the plots do not fit well on your screen
 figure_width = 16            # <int>   width of figure which contains all plots and animations
 figure_height = 8            # <int>   height of figure which contains all plots and animations
@@ -86,6 +86,9 @@ color = 0.99, 0.99, 0.11             # RGB value in animation. Minimum = 0, maxi
 body_type = planet                   # star/planet
 mass = 0.642e24                      # [kg]
 radius = 3346e03                     # [m]
+pot_transit_date = 2468000.2         # Barycentric Julian Date (TDB) at the time of potential transit
+                                     # The planet is nearer to the viewer than the sun and crosses the
+                                     # perpendicular axis of the sun.
 
 # if the state vector (startposition and velocity) is provided, no Kepler orbit parameters have to be provided
 # startposition = 1.0 * au, 1.0 * au, 1.0 * au  # [m], [m], [m]
@@ -104,10 +107,10 @@ L = 0                                # [deg] mean longitude
 # ma can be calculated from ϖ and L.
 # ω can be calculated from ϖ and Ω.
 # nu = 0                             # [deg] true anomaly.
-                                     # Per definition = 270° at the time of an exoplanet's primary transit.
+                                     # Per definition = 0° at the time of an exoplanet's primary transit.
 # ma = 0                             # [deg] mean anomaly
 # ea = 0                             # [deg] eccentric anomaly
 T = 0                            # [s] Time of periapsis
 
-t = 3600*24*365                              # [s] arbitrary point in time (typically time since last time of transit)
+t = 0  # 3600*24*365                              # [s] arbitrary point in time (typically time since last time of transit)
 color = 0.01, 0.99, 0.01             # RGB value in animation. Minimum = 0, maximum = 1.
