--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -52,7 +52,6 @@ max_radius = 6.0             # [%] <float> (if autoscale on) maximum radius of l
                              # If necessary, scaling will be done logarithmically instead of linear.
 
 [Plot]
-x_unit = d                   # <string> allowed values: s (seconds), h (hours), d (days), m (months), y (years)
 start_date = 2468000.0       # Barycentric Julian Date (TDB) at the start of the simulation
 # adjust the following plot parameters in this section only if the plots do not fit well on your screen
 figure_width = 16            # <int>   width of figure which contains all plots and animations
@@ -75,7 +74,7 @@ debug_L = [i for i in range(0, 360, 17)] # run funktion debug_print_points for t
 [TestSun]
 body_type = star                     # star/planet
 mass = 1.0 * m_sun                   # [kg]
-radius = 0.1 * r_sun                 # [m]
+radius = 1.0 * r_sun                 # [m]
 luminosity = 1.0 * l_sun             # [W]
 startposition = 0.0, 0.0, 0.0        # [m], [m], [m]
 velocity = 0.0, 0.0, 0.0             # [m/s], [m/s], [m/s]
@@ -89,6 +88,7 @@ radius = 3346e03                     # [m]
 pot_transit_date = 2468000.25        # Barycentric Julian Date (TDB) at the time of potential transit
                                      # The planet is nearer to the viewer than the sun.
                                      # Planet and sun are positioned at the same x value.
+                                     # This value should be larger than the video's start_date
 
 # if the state vector (startposition and velocity) is provided, no Kepler orbit parameters have to be provided
 # startposition = 1.0 * au, 1.0 * au, 1.0 * au  # [m], [m], [m]
