--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -13,7 +13,7 @@ m_earth = 5.9720e24          # [kg]  <float> Earth mass
 v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit was circular)
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
-video_file = ../animations/MyFirstVideo.mp4  # <string> the resulting video is saved in this file
+video_file = ../animations/MyFirstVideo90.mp4  # <string> the resulting video is saved in this file
 frames = 48                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
@@ -85,10 +85,7 @@ color = 0.99, 0.99, 0.11             # RGB value in animation. Minimum = 0, maxi
 body_type = planet                   # star/planet
 mass = 0.642e24                      # [kg]
 radius = 3346e03                     # [m]
-pot_transit_date = 2468000.25        # Barycentric Julian Date (TDB) at the time of potential transit
-                                     # The planet is nearer to the viewer than the sun.
-                                     # Planet and sun are positioned at the same x value.
-                                     # This value should be larger than the video's start_date
+;pot_transit_date = 2468030.25        # Barycentric Julian Date (TDB) at the time of potential transit
 
 # if the state vector (startposition and velocity) is provided, no Kepler orbit parameters have to be provided
 # startposition = 1.0 * au, 1.0 * au, 1.0 * au  # [m], [m], [m]
@@ -100,16 +97,16 @@ i = 90.0                             # [deg] inclination. 90°: we see orbit edg
                                      # in front of the sun, as well as above and behind the sun in edge view.
 longitude_of_ascending_node = 0      # [deg] Ω: longitude of ascending node
 longitude_of_periapsis = 0           # [deg] ϖ: longitude of periapsis
-L = 0                                # [deg] mean longitude
+L = 270                                # [deg] mean longitude
 
 # argument_of_periapsis = 0          # [deg] ω: argument of periapsis
 # nu, ma, ea, T:   Only true anomaly or mean_anomaly or eccentric_anomaly or time_of_periapsis has to be provided.
 # ma can be calculated from ϖ and L.
 # ω can be calculated from ϖ and Ω.
-# nu = 0                             # [deg] true anomaly.
+;nu = -125                             # [deg] true anomaly.
                                      # Per definition = 0° at the time of an exoplanet's primary transit.
 # ma = 0                             # [deg] mean anomaly
 # ea = 0                             # [deg] eccentric anomaly
-T = 0                                # [s] Time of periapsis
-
+;T = 0#3 * 24 * 3600                                # [s] Time of periapsis
+;t = -30.25 * 24 * 3600            # [t] Time since initial position in orbit. Default=0.
 color = 0.01, 0.99, 0.01             # RGB value in animation. Minimum = 0, maximum = 1.
