--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -13,7 +13,7 @@ m_earth = 5.9720e24          # [kg]  <float> Earth mass
 v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit was circular)
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
-video_file = ../animations/MyFirstVideo90.mp4  # <string> the resulting video is saved in this file
+video_file = ../animations/MyFirstVideo.mp4  # <string> the resulting video is saved in this file
 frames = 48                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
@@ -95,18 +95,20 @@ a = 1.0 * au                         # [m] semi-major axis
 e = 0.7                              # [1] eccentricity
 i = 90.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
                                      # in front of the sun, as well as above and behind the sun in edge view.
-longitude_of_ascending_node = 0      # [deg] Ω: longitude of ascending node
-longitude_of_periapsis = 0           # [deg] ϖ: longitude of periapsis
-L = 270                                # [deg] mean longitude
 
-# argument_of_periapsis = 0          # [deg] ω: argument of periapsis
+longitude_of_ascending_node = 0      # [deg] Ω: longitude of ascending node
+longitude_of_periapsis = 80           # [deg] ϖ: longitude of periapsis
+argument_of_periapsis = 80          # [deg] ω: argument of periapsis
+
+;L = 270                             # [deg] mean longitude
+;nu = 90                             # [deg] true anomaly.
+;ma = 90                             # [deg] mean anomaly
+;ea = 270                            # [deg] eccentric anomaly
+;T = 3 * 91.3 * 24 * 3600            # [s] Time of periapsis
+;t = 1 * 91.3 * 24 * 3600             # [t] Time since initial position in orbit. Default=0.
+
+color = 0.01, 0.99, 0.01             # RGB value in animation. Minimum = 0, maximum = 1.
+
 # nu, ma, ea, T:   Only true anomaly or mean_anomaly or eccentric_anomaly or time_of_periapsis has to be provided.
 # ma can be calculated from ϖ and L.
 # ω can be calculated from ϖ and Ω.
-;nu = -125                             # [deg] true anomaly.
-                                     # Per definition = 0° at the time of an exoplanet's primary transit.
-# ma = 0                             # [deg] mean anomaly
-# ea = 0                             # [deg] eccentric anomaly
-;T = 0#3 * 24 * 3600                                # [s] Time of periapsis
-;t = -30.25 * 24 * 3600            # [t] Time since initial position in orbit. Default=0.
-color = 0.01, 0.99, 0.01             # RGB value in animation. Minimum = 0, maximum = 1.
