--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -85,7 +85,6 @@ color = 0.99, 0.99, 0.11             # RGB value in animation. Minimum = 0, maxi
 body_type = planet                   # star/planet
 mass = 0.642e24                      # [kg]
 radius = 3346e03                     # [m]
-;pot_transit_date = 2468030.25        # Barycentric Julian Date (TDB) at the time of potential transit
 
 # if the state vector (startposition and velocity) is provided, no Kepler orbit parameters have to be provided
 # startposition = 1.0 * au, 1.0 * au, 1.0 * au  # [m], [m], [m]
@@ -93,22 +92,19 @@ radius = 3346e03                     # [m]
 
 a = 1.0 * au                         # [m] semi-major axis
 e = 0.7                              # [1] eccentricity
-i = 90.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
+i = 75.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
                                      # in front of the sun, as well as above and behind the sun in edge view.
 
 longitude_of_ascending_node = 0      # [deg] Ω: longitude of ascending node
-longitude_of_periapsis = 80           # [deg] ϖ: longitude of periapsis
-argument_of_periapsis = 80          # [deg] ω: argument of periapsis
+longitude_of_periapsis = 0           # [deg] ϖ: longitude of periapsis
+;argument_of_periapsis = 0            # [deg] ω: argument of periapsis
 
 ;L = 270                             # [deg] mean longitude
 ;nu = 90                             # [deg] true anomaly.
 ;ma = 90                             # [deg] mean anomaly
 ;ea = 270                            # [deg] eccentric anomaly
 ;T = 3 * 91.3 * 24 * 3600            # [s] Time of periapsis
-;t = 1 * 91.3 * 24 * 3600             # [t] Time since initial position in orbit. Default=0.
+                                     # The absolute time of periapsis is start_date + T
+;t = 1 * 91.3 * 24 * 3600            # [t] Optional additional time difference. Default=0.
 
 color = 0.01, 0.99, 0.01             # RGB value in animation. Minimum = 0, maximum = 1.
-
-# nu, ma, ea, T:   Only true anomaly or mean_anomaly or eccentric_anomaly or time_of_periapsis has to be provided.
-# ma can be calculated from ϖ and L.
-# ω can be calculated from ϖ and Ω.
