--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -92,15 +92,15 @@ radius = 3346e03                     # [m]
 
 a = 1.0 * au                         # [m] semi-major axis
 e = 0.7                              # [1] eccentricity
-i = 75.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
+i = 90.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
                                      # in front of the sun, as well as above and behind the sun in edge view.
 
 longitude_of_ascending_node = 0      # [deg] Ω: longitude of ascending node
 longitude_of_periapsis = 0           # [deg] ϖ: longitude of periapsis
 ;argument_of_periapsis = 0            # [deg] ω: argument of periapsis
 
-;L = 270                             # [deg] mean longitude
-;nu = 90                             # [deg] true anomaly.
+L = 90                             # [deg] mean longitude
+;nu = 85                             # [deg] true anomaly.
 ;ma = 90                             # [deg] mean anomaly
 ;ea = 270                            # [deg] eccentric anomaly
 ;T = 3 * 91.3 * 24 * 3600            # [s] Time of periapsis
