--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -96,13 +96,13 @@ i = 90.0                             # [deg] inclination. 90°: we see orbit edg
                                      # in front of the sun, as well as above and behind the sun in edge view.
 
 longitude_of_ascending_node = 0      # [deg] Ω: longitude of ascending node
-longitude_of_periapsis = 0           # [deg] ϖ: longitude of periapsis
-;argument_of_periapsis = 0            # [deg] ω: argument of periapsis
+longitude_of_periapsis = 315           # [deg] ϖ: longitude of periapsis
+argument_of_periapsis = 315            # [deg] ω: argument of periapsis
 
-L = 90                             # [deg] mean longitude
-;nu = 85                             # [deg] true anomaly.
+;L = 140                             # [deg] mean longitude
+nu = 135                             # [deg] true anomaly.
 ;ma = 90                             # [deg] mean anomaly
-;ea = 270                            # [deg] eccentric anomaly
+;ea = 90                            # [deg] eccentric anomaly
 ;T = 3 * 91.3 * 24 * 3600            # [s] Time of periapsis
                                      # The absolute time of periapsis is start_date + T
 ;t = 1 * 91.3 * 24 * 3600            # [t] Optional additional time difference. Default=0.
