--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -13,7 +13,7 @@ m_earth = 5.9720e24          # [kg]  <float> Earth mass
 v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit was circular)
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
-video_file = ../animations/MyFirstVideo.mp4  # <string> the resulting video is saved in this file
+video_file = ../animations/MyFirstVideo2.mp4  # <string> the resulting video is saved in this file
 frames = 48                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
@@ -95,12 +95,12 @@ e = 0.7                              # [1] eccentricity
 i = 90.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
                                      # in front of the sun, as well as above and behind the sun in edge view.
 
-longitude_of_ascending_node = 0      # [deg] Ω: longitude of ascending node
-longitude_of_periapsis = 315           # [deg] ϖ: longitude of periapsis
-argument_of_periapsis = 315            # [deg] ω: argument of periapsis
+longitude_of_ascending_node = 45      # [deg] Ω: longitude of ascending node
+longitude_of_periapsis = 0           # [deg] ϖ: longitude of periapsis
+argument_of_periapsis = -45            # [deg] ω: argument of periapsis
 
 ;L = 140                             # [deg] mean longitude
-nu = 135                             # [deg] true anomaly.
+;nu = 135                             # [deg] true anomaly.
 ;ma = 90                             # [deg] mean anomaly
 ;ea = 90                            # [deg] eccentric anomaly
 ;T = 3 * 91.3 * 24 * 3600            # [s] Time of periapsis
