--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -90,21 +90,25 @@ radius = 3346e03                     # [m]
 # startposition = 1.0 * au, 1.0 * au, 1.0 * au  # [m], [m], [m]
 # velocity = 1.0 * v_earth, 1.0 * v_earth, 1.0 * v_earth  # [m/s], [m/s], [m/s]
 
+# Mandatory parameters:
 a = 1.0 * au                         # [m] semi-major axis
 e = 0.7                              # [1] eccentricity
 i = 90.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
                                      # in front of the sun, as well as above and behind the sun in edge view.
 
-longitude_of_ascending_node = 45      # [deg] Ω: longitude of ascending node
+# Two of the following three parameters have to be provided:
+longitude_of_ascending_node = 0      # [deg] Ω: longitude of ascending node
 longitude_of_periapsis = 0           # [deg] ϖ: longitude of periapsis
-argument_of_periapsis = -45            # [deg] ω: argument of periapsis
+argument_of_periapsis = 0            # [deg] ω: argument of periapsis
 
-;L = 140                             # [deg] mean longitude
-;nu = 135                             # [deg] true anomaly.
-;ma = 90                             # [deg] mean anomaly
-;ea = 90                            # [deg] eccentric anomaly
-;T = 3 * 91.3 * 24 * 3600            # [s] Time of periapsis
-                                     # The absolute time of periapsis is start_date + T
-;t = 1 * 91.3 * 24 * 3600            # [t] Optional additional time difference. Default=0.
+# One of the following five parameters has to be provided in order to specify the initial position on the orbit.
+L = 0                                # [deg] mean longitude
+nu = 0                               # [deg] true anomaly.
+ma = 0                               # [deg] mean anomaly
+ea = 0                               # [deg] eccentric anomaly
+T = 3 * 91.3 * 24 * 3600             # [s] Time of periapsis
+                                     # The absolute time of periapsis is start_date - T
+
+t = 0                                # [t] Optional additional time difference. Default=0.
 
 color = 0.01, 0.99, 0.01             # RGB value in animation. Minimum = 0, maximum = 1.
