--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -14,11 +14,11 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 video_file = ../animations/MyFirstVideo.mp4  # <string> the resulting video is saved in this file
-frames = 4                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 10                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
-dt = 3600                    # [s] <int> real time difference between simulation iterations. Proportional to
+dt = 1000                    # [s] <int> real time difference between simulation iterations. Proportional to
                              # the velocity of the objects in the animation. Needs to be small in order to
                              # calculate with sufficient precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 10000 seconds. If
@@ -26,7 +26,7 @@ dt = 3600                    # [s] <int> real time difference between simulation
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # If your star system produces eclipses, dt * sampling_rate should be < 1000 in
                              # order to generate an accurate light curve.
-sampling_rate = 182          # <int> Calculating the physics is much faster than animating it. Therefore only
+sampling_rate = 30           # <int> Calculating the physics is much faster than animating it. Therefore only
                              # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
                              # In other words: The simulation's number of calculated iterations and also the
                              # length of the array with light curve data will be equal to frames * sampling_rate.
@@ -102,11 +102,11 @@ longitude_of_periapsis = 0           # [deg] ϖ: longitude of periapsis
 argument_of_periapsis = 0            # [deg] ω: argument of periapsis
 
 # One of the following five parameters has to be provided in order to specify the initial position on the orbit.
-L = 0                                # [deg] mean longitude
-nu = 0                               # [deg] true anomaly.
-ma = 0                               # [deg] mean anomaly
-ea = 0                               # [deg] eccentric anomaly
-T = 3 * 91.3 * 24 * 3600             # [s] Time of periapsis
+;L = 0                                # [deg] mean longitude
+nu = 88                              # [deg] true anomaly.
+;ma = 0                               # [deg] mean anomaly
+;ea = 0                               # [deg] eccentric anomaly
+;T = 0                                # [s] Time of periapsis
                                      # The absolute time of periapsis is start_date - T
 
 t = 0                                # [t] Optional additional time difference. Default=0.
