--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -14,11 +14,11 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 video_file = ../animations/MyFirstVideo.mp4  # <string> the resulting video is saved in this file
-frames = 60                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 50                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
-fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
+fps = 25                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
-dt = 70                      # [s] <int> real time difference between simulation iterations. Proportional to
+dt = 240                     # [s] <int> real time difference between simulation iterations. Proportional to
                              # the velocity of the objects in the animation. Needs to be small in order to
                              # calculate with sufficient precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 10000 seconds. If
@@ -26,7 +26,7 @@ dt = 70                      # [s] <int> real time difference between simulation
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # If your star system produces eclipses, dt * sampling_rate should be < 1000 in
                              # order to generate an accurate light curve.
-sampling_rate = 30           # <int> Calculating the physics is much faster than animating it. Therefore only
+sampling_rate = 3000         # <int> Calculating the physics is much faster than animating it. Therefore only
                              # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
                              # In other words: The simulation's number of calculated iterations and also the
                              # length of the array with light curve data will be equal to frames * sampling_rate.
@@ -83,18 +83,23 @@ color = 0.99, 0.99, 0.11             # RGB value in animation. Minimum = 0, maxi
 
 [TestPlanet]
 body_type = planet                   # star/planet
-mass = 0.642e24                      # [kg]
-radius = 3346e03                     # [m]
+mass = 1.0 * m_earth                 # [kg]
+;mass = 0.642e24                      # [kg]
+radius = 1.0 * r_earth               # [m]
+;radius = 3.346e06                     # [m]
 
 # if the state vector (startposition and velocity) is provided, no Kepler orbit parameters have to be provided
 # startposition = 1.0 * au, 1.0 * au, 1.0 * au  # [m], [m], [m]
 # velocity = 1.0 * v_earth, 1.0 * v_earth, 1.0 * v_earth  # [m/s], [m/s], [m/s]
 
 # Mandatory parameters:
-a = 1.0 * au                         # [m] semi-major axis
 e = 0.7                              # [1] eccentricity
 i = 90.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
                                      # in front of the sun, as well as above and behind the sun in edge view.
+
+# One of the following two parameters has to be provided.
+a = 1.0 * au                         # [m] semi-major axis
+P = 3600 * 24 * 365.25               # [s] Period
 
 # Two of the following three parameters have to be provided:
 longitude_of_ascending_node = 0      # [deg] Ω: longitude of ascending node
@@ -103,7 +108,7 @@ argument_of_periapsis = 0            # [deg] ω: argument of periapsis
 
 # One of the following five parameters has to be provided in order to specify the initial position on the orbit.
 ;L = 0                                # [deg] mean longitude
-nu = 88                              # [deg] true anomaly.
+nu = 240                              # [deg] true anomaly.
 ;ma = 0                               # [deg] mean anomaly
 ;ea = 0                               # [deg] eccentric anomaly
 ;T = 0                                # [s] Time of periapsis
