--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -14,7 +14,7 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 video_file = ../animations/MyFirstVideo.mp4  # <string> the resulting video is saved in this file
-frames = 50                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 5                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 25                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -26,7 +26,7 @@ dt = 240                     # [s] <int> real time difference between simulation
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # If your star system produces eclipses, dt * sampling_rate should be < 1000 in
                              # order to generate an accurate light curve.
-sampling_rate = 3000         # <int> Calculating the physics is much faster than animating it. Therefore only
+sampling_rate = 300          # <int> Calculating the physics is much faster than animating it. Therefore only
                              # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
                              # In other words: The simulation's number of calculated iterations and also the
                              # length of the array with light curve data will be equal to frames * sampling_rate.
@@ -72,12 +72,12 @@ debug_L = [i for i in range(0, 360, 17)] # run funktion debug_print_points for t
 # the section names define the names of the bodies
 
 [TestSun]
-body_type = star                     # star/planet
+body_type = star                  # star/planet
 mass = 1.0 * m_sun                   # [kg]
 radius = 1.0 * r_sun                 # [m]
 luminosity = 1.0 * l_sun             # [W]
-startposition = 0.0, 0.0, 0.0        # [m], [m], [m]
-velocity = 0.0, 0.0, 0.0             # [m/s], [m/s], [m/s]
+;startposition = 0.0, 0.0, 0.0        # [m], [m], [m]
+;velocity = 0.0, 0.0, 0.0             # [m/s], [m/s], [m/s]
 limb_darkening = [0.3, 0.9, -0.2]    # Limb darkening coefficients a0, a1, ..., an
 color = 0.99, 0.99, 0.11             # RGB value in animation. Minimum = 0, maximum = 1.
 
