--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -14,11 +14,11 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 video_file = ../animations/MyFirstVideo.mp4  # <string> the resulting video is saved in this file
-frames = 5                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 15                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 25                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
-dt = 240                     # [s] <int> real time difference between simulation iterations. Proportional to
+dt = 2400                    # [s] <int> real time difference between simulation iterations. Proportional to
                              # the velocity of the objects in the animation. Needs to be small in order to
                              # calculate with sufficient precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 10000 seconds. If
@@ -99,7 +99,7 @@ i = 90.0                             # [deg] inclination. 90°: we see orbit edg
 
 # One of the following two parameters has to be provided.
 a = 1.0 * au                         # [m] semi-major axis
-P = 3600 * 24 * 365.25               # [s] Period
+;P = 3600 * 24 * 365.25               # [s] Period
 
 # Two of the following three parameters have to be provided:
 longitude_of_ascending_node = 0      # [deg] Ω: longitude of ascending node
